mik-sdk-macros/tests/ui/derive/path_on_tuple_struct.stderr
error: Path derive only supports structs with named fields. Example: `struct UserPath { org_id: String, id: String }`
 --> tests/ui/derive/path_on_tuple_struct.rs:5:1
  |
5 | struct PathTuple(String);
  | ^^^^^^^^^^^^^^^^^^^^^^^^^
